--- a/index.html
+++ b/index.html
@@ -20,5 +20,19 @@
 <a href= "https://www.minecraft.net/en-us">
 <img src= "minecraft%20steve.jpg"  alt=" minecraft steve" height="100px">   
 </a>   
+    
+    <h3> steps of how to play minecraft</h3>     
+<ul>   
+    <li>get a pc</li>
+    <li>install minecraft</li>
+<li>now you can play minecraft</li> 
+</ul>
+    
+    <h3>steps how to steal a pc</h3>
+<ol>
+    <li>Wear all black clothing including a mask</li>
+    <li>rob the store at 1 am</li>
+    <li>grab the pc</li>
+    </ol>
  <body>   
 <html>    
